# spacelord

./: .env.template  .gitignore  BUGS.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  INTEGRATION_GUIDE.md  MENTOR_REVIEW_SCRIPT.txt  PACMAN_VISION.py  PROMOTIONAL_CONTENT.md  README.md  REBUILD_PLAN.md  SECURITY.md  SKILL.md  SKILLS.md  TODO.md  TODO_MACOS_LOCKING.md  approve_hts_token.js  associate_hts_token.js  btc_rebalancer_swap_engine.py  build_routes.py  debug_price_final.py  debug_router.py  dump.py  launch.sh  package-lock.json  package.json  pacman  pacman_agent.py  pacman_app.py  pacman_chat.py  pacman_chat_v3.py  pacman_chat_v4.py  pacman_cli.py  pacman_config.py  pacman_crosscheck.py  pacman_data_raw.json  pacman_display.py  pacman_errors.py  pacman_executor.py  (+29 more)
.agent/: agents.md
abi/: erc20.json  position_manager.json
archive/: PACMAN_VISION.py  build_routes.py  generate_brain_v2_data.py  generate_final_training_data.py  pacman_agent.py  pacman_architecture.md  pacman_associate.py  pacman_brain_v2.py  pacman_btc_rebalancer_bridge.py  pacman_chat.py  pacman_chat_v4.py  pacman_preflight.py  pacman_ultimate_matrix.py  pool_graph.py  routes.json  test_agent.py  test_quote.py  train_brain.py  verify_ux.py
bounty/: BOUNTY_PITCH_DECK.md  README.md  generate_pdf.py
cli/: app.py  display.py  main.py  pacman_filter.py  spacelord_filter.py  text_content.py
dashboard/: index.html
data/: README.md  aliases.json  base_tokens.template.json  btc_history_1d.json  governance.json  orders.json  pacman_data_raw.json  pacman_filter.py  pools.json  pools_v2.json  robot_state.json  settings.json  spacelord_data_raw.json  status.json  text_content.py  tokens.json  variants.json
docs/: AGENT_INTEGRATION_PLAN.md  AI_AGENT_GUIDE.md  CONVERT_FAILURE_ANALYSIS.md  DESIGN_V1_CONNECTOR.md  DEVELOPMENT_LOG.md  EVM_MATH_PADDING.md  EXPANSION_PLAN.md  EXPANSION_PLAN_POSSIBILITY.md  HCS_COMMUNICATION_BUS.md  HCS_FEEDBACK.md  HEDERA_ACCOUNT_BALANCE_DEPRECATION.md  HEDERA_GAS_SAFETY.md  HTS_APPROVAL_BUG.md  INTEGRATION_GUIDE.md  LP_MINT_REVERT_RESOLUTION.md  PITCH_CONTENT_GUIDE.md  PITCH_DECK.md  PRODUCT_SPEC.md  README.md  ROUTER_EVOLUTION.md  SAUCERSWAP_API_GUIDE.md  SAUCERSWAP_COMPARISON.md  SAUCERSWAP_V2_RULES.md  SKILLS.md  SKILLS_OPENCLAW_PLUGIN_DEV.md  SKILLS_OPENCLAW_QUICKSTART.md  TECHNICAL_ROADMAP.md  WHITEPAPER.md  WHITEPAPER_v2.md  ascii_design.md  emergency-drain-2026-02-27.md  hts_wrap_debug_report.md  learning_dev_workflow.md  mentor_review_script.md
execution_records/: exec_20260209_142811_USDC_to_WBTC_HTS.json  exec_20260209_143258_USDC_to_WBTC_HTS.json  exec_20260209_145226_WBTC_HTS_to_USDC.json  exec_20260209_145739_WBTC_HTS_to_USDC.json  exec_20260209_150503_WBTC_LZ_to_WBTC_HTS.json  exec_20260209_151158_WBTC_LZ_to_USDC.json  exec_20260209_151808_USDC_HTS_to_WBTC_HTS.json  exec_20260209_152303_USDC_to_WBTC_HTS.json  exec_20260209_154741_HBAR_to_USDC.json  exec_20260209_155726_HBAR_to_USDC.json  exec_20260209_164057_HBAR_to_USDC.json  exec_20260209_165428_HBAR_to_USDC.json  exec_20260209_170226_HBAR_to_USDC.json  exec_20260209_170900_HBAR_to_USDC.json  exec_20260209_172124_HBAR_to_USDC.json  exec_20260209_174115_HBAR_to_USDC.json  exec_20260209_183507_USDC_to_HBAR.json  exec_20260209_204133_USDC_to_HBAR.json  exec_20260209_204711_HBAR_to_USDC.json  exec_20260209_204907_HBAR_to_USDC.json  exec_20260209_213828_HBAR_to_USDC.json  exec_20260209_213829_HBAR_to_SAUCE.json  exec_20260209_213830_HBAR_to_XSAUCE.json  exec_20260209_213831_HBAR_to_DOVU.json  exec_20260209_213831_HBAR_to_HBARX.json  exec_20260209_213832_HBAR_to_PACK.json  exec_20260209_213833_HBAR_to_BONZO.json  exec_20260209_213833_HBAR_to_USDC[hts].json  exec_20260209_213834_HBAR_to_WBTC[hts].json  exec_20260209_213835_HBAR_to_DAVINCI.json  exec_20260209_213836_HBAR_to_GRELF.json  exec_20260209_213836_HBAR_to_HTS-WBTC.json  exec_20260209_213837_USDC_to_HBAR.json  exec_20260209_213838_USDC_to_SAUCE.json  exec_20260209_213838_USDC_to_USDC[hts].json  exec_20260209_213840_USDC_to_WBTC[hts].json  exec_20260209_213841_USDC_to_HBAR.json  exec_20260209_213841_USDC_to_HTS-WBTC.json  exec_20260209_213842_SAUCE_to_USDC.json  exec_20260209_213843_SAUCE_to_HBAR.json  (+48 more)
hak-usdt0-bridge-plugin/: README.md  package.json  tsconfig.json
lib/: bridge_usdt0.py  multicall.py  patch_reporter.py  prices.py  research.py  saucerswap.py  staking.py  tg_format.py  tg_router.py  transfers.py  v1_saucerswap.py  v2_liquidity.py
memory/: 2026-03-20.md
openclaw/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SETUP.md  SOUL.md
pacman_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pitch_deck/: README.md  generate_deck.js
power_law_model_import/: .env.example  README.md  SETTINGS_REFERENCE.md
scripts/: md_to_pdf.py  (+12 more)
(+189 files in other folders)
