[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pacman-cli"
version = "1.0.0-beta"
description = "AI-native self-custody middleware for Hedera Hashgraph"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Chris0x88" }
]
dependencies = [
    "web3>=6.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "cryptography>=41.0.0",
    "hiero-sdk-python>=0.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "matplotlib>=3.10.8",
]

[project.scripts]
pacman = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*", "lib*", "data*"]

# ---------------------------------------------------------------------------
# uv Configuration (zero-dependency launcher)
# ---------------------------------------------------------------------------
[tool.uv]
managed = true
